[gd_scene load_steps=6 format=2]

[ext_resource path="res://game development tileset/slider.png" type="Texture" id=1]
[ext_resource path="res://settings.gd" type="Script" id=2]
[ext_resource path="res://level select/home screen hover.png" type="Texture" id=3]
[ext_resource path="res://level select/home screen.png" type="Texture" id=4]
[ext_resource path="res://level select/home screen press.png" type="Texture" id=5]

[node name="settings" type="Node2D"]
script = ExtResource( 2 )

[node name="volume" type="Node2D" parent="."]

[node name="volume" type="Label" parent="volume"]
margin_left = 870.0
margin_top = 250.0
margin_right = 970.0
margin_bottom = 264.0
rect_scale = Vector2( 5, 5 )
text = "volume"
align = 1

[node name="music" type="Label" parent="volume"]
margin_left = 870.0
margin_top = 400.0
margin_right = 970.0
margin_bottom = 414.0
rect_scale = Vector2( 5, 5 )
text = "music"
align = 1

[node name="sound effects" type="Label" parent="volume"]
margin_left = 870.0
margin_top = 600.0
margin_right = 970.0
margin_bottom = 614.0
rect_scale = Vector2( 5, 5 )
text = "sound effects"
align = 1

[node name="bgm" type="HSlider" parent="volume"]
margin_left = 870.0
margin_top = 500.0
margin_right = 970.0
margin_bottom = 518.0
rect_scale = Vector2( 5, 5 )
custom_icons/tick = ExtResource( 1 )
custom_icons/grabber_disabled = ExtResource( 1 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
min_value = -80.0
max_value = 0.0

[node name="se" type="HSlider" parent="volume"]
margin_left = 870.0
margin_top = 700.0
margin_right = 970.0
margin_bottom = 718.0
rect_scale = Vector2( 5, 5 )
custom_icons/tick = ExtResource( 1 )
custom_icons/grabber_disabled = ExtResource( 1 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
min_value = -80.0
max_value = 0.0

[node name="other setting" type="Node2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 34.0
margin_top = 1121.0
margin_right = 98.0
margin_bottom = 1185.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )

[connection signal="value_changed" from="volume/bgm" to="." method="_on_bgm_value_changed"]
[connection signal="value_changed" from="volume/se" to="." method="_on_se_value_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
